# Volumetric-Video-Reconstruction

./: README.md
cpp/dracocompressionplugin/: .gitignore  CMakeLists.txt  README.md  conanfile.py
cpp/dracocompressionplugin/src/: CompressionUtils.cpp  CompressionUtils.h  DracoFileLoader.cpp  DracoFileLoader.h  dllmain.cpp  main.cpp
cpp/dracocompressionplugin/src/Unity/: LICENSE.md
python/Benchmarks/: plot_measurements.py
python/ContextCapture/: generate_mesh_from_pc.py
python/MLTraining/: finetune_hparams.py  train.py
python/ML_Models/: model_gaussian_noise_isaacsim+punet_dataset.pt  model_guassian_noise_punet_dataset.pt  model_kinect_supervised_500k.pt  model_kinect_unsupervised_500k.pt  model_pretrained_finetuned.pt  model_white_noise_supervised_500k.pt  model_white_noise_unsupervised_500k.pt
python/MeshLab/: simplify_meshes.py
python/MeshSmoothing/: simplify_meshes.py
python/Open3D/: depthmap2pointcloud.py
python/SurfaceReconstruction/: generate_mesh_from_pc.py
python/SyntheticDataGeneration/: evaluate_c2c_distance.py  guided_filter_based_denoising.py  macros.py  noise_model.py  offline_generation.py  quick_record.py  run_isaac.bat  visualize.py
python/SyntheticDataGeneration/composer-workspace/: Errors.md  gen_data.py  run_isaac.bat
python/Utils/: vflip_textures.py
scripts/: README.md  run_isaac_env.bat  run_unity.bat  run_vs.bat
unity/Assets/Scenes/: SampleScene.unity
unity/Assets/Scripts/: DracoFileLoaderCPP.cs  VVPlayer.cs
unity/Assets/VirtualRGBD/: RGBDCamera.cs
unity/ProjectSettings/: ProjectSettings.asset
(+57 files in other folders)
